--- a/Intro-page/index.html
+++ b/Intro-page/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <video id="introVideo" autoplay muted loop playsinline>
-      <source src="Intro-page\INTRO_POS_CONTROLE.mp4" type="video/mp4" />
+      <source src="INTRO_POS_CONTROLE.mp4" type="video/mp4" />
       Seu navegador não suporta vídeo.
     </video>
     <script>
